--- a/platforms/mean/client/views/components/light/light.html
+++ b/platforms/mean/client/views/components/light/light.html
@@ -4,11 +4,11 @@
         	<a href="javascript:void(0)">
         	<div class="o-stack__cell u-mr-small"><i class="c-icon c-icon--main">power_settings_new</i></div>
         	</a>
-        </div>
-         -->
+        </div> -->
+        
          <h4 class="u-font-regular">{{lightData.label}}</h4>
-        <!-- <p>London, UK</p><a class="c-button c-button--hollow c-button--primary u-radius-rounded" href="javascript:void(0)">Follow</a></div>
-    <div class="o-block__cell u-border-top">
+        <!-- <p>London, UK</p><a class="c-button c-button--hollow c-button--primary u-radius-rounded" href="javascript:void(0)">Follow</a></div> -->
+    <!-- <div class="o-block__cell u-border-top">
         <div class="o-stack o-stack--distributed u-text-center u-bg-primary">
             <a class="o-stack__cell u-p-small u-text-bare u-color-white-900 u-border-right u-border-white-100" href="javascript:void(0)">
                 <p class="u-font-medium u-font-bold">100</p><span>Friends</span></a>
@@ -19,3 +19,14 @@
         </div>
     </div> -->
 </div>
+</div>
+<!-- <div class="o-block">
+    <div class="o-block__cell">
+        
+    </div>
+    <div class="o-block__cell">
+        <div class="o-stack__cell">
+            <span>{{lightData.label}}</span>
+        </div>
+    </div>
+</div> -->
