--- a/platforms/mean/client/views/components/topbar/topbar.html
+++ b/platforms/mean/client/views/components/topbar/topbar.html
@@ -34,7 +34,7 @@
             <div class="c-avatar o-stack__cell"></div>
           </div>
         </div>
-        <div class="o-stack__cell">
+<!--         <div class="o-stack__cell">
           <ul class="c-topbar__sideList o-stack o-stack--center o-stack--nowrap u-list-bare">
            
             <li class="has-dropdown">
@@ -43,7 +43,7 @@
             </li>
            </ul>
         
-        </div>
+        </div> -->
         <div class="o-stack__cell">
           <ul class="c-topbar__sideList o-stack o-stack--center o-stack--nowrap u-list-bare">
            
