--- a/platforms/android/Rousing/app/src/main/res/layout/activity_landing.xml
+++ b/platforms/android/Rousing/app/src/main/res/layout/activity_landing.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="com.rousing.oen.rousing.LandingActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.rousing.oen.rousing.LandingActivity">
 
-</GridLayout>
+    <ListView
+        android:id="@+id/landingDeviceList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:visibility="visible" />
+
+    <Button
+        android:id="@+id/addNewDeviceButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:text="@string/addNewDeviceButton"
+        android:visibility="visible" />
+
+</LinearLayout>
