--- a/platforms/android/Rousing/app/src/main/res/layout/activity_main.xml
+++ b/platforms/android/Rousing/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:text="Smart Light"
+        android:visibility="invisible"
         app:layout_constraintHorizontal_bias="0.94"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -31,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:text="Moody"
+        android:text="Color"
         app:layout_constraintHorizontal_bias="0.059"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
