--- a/platforms/android/Rousing/app/src/main/res/layout/device_search_list_layout.xml
+++ b/platforms/android/Rousing/app/src/main/res/layout/device_search_list_layout.xml
@@ -1,45 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/searchListItem"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
     <TextView
         android:id="@+id/modelName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Model Name: "
-        android:textStyle="bold"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:padding="2dp"
+        android:text="Model Name: "
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#4d4d4d"
-        />
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/modelNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Model No: "
-        android:textStyle="bold"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:padding="2dp"
+        android:text="Model No: "
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#4d4d4d"
-        />
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/serialNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Serial No: "
-        android:textStyle="bold"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:padding="2dp"
+        android:text="Serial No: "
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#4d4d4d"
-        />
+        android:textStyle="bold" />
 </LinearLayout>
